--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@astrojs/node": "^9.2.2",
+    "@astrojs/react": "^4.3.0",
     "@tailwindcss/vite": "^4.1.8",
-    "astro": "^5.8.1"
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
+    "astro": "^5.8.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
